# webtoolkit

./: .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
src/: index.ts
src/django_project/: .env.sample  justfile
src/django_project/core/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
src/django_project/core/middleware/: real_ip.py
src/django_project/core/migrations/: 0003_shortenedurl_is_public_uploadedfile_is_public.py  0004_shortenedurl_requests_uploadedfile_requests.py
src/django_project/core/templates/core/: _base.html  _base_body.html  about_user.html  file_hosting.html  home.html  register.html  url_shortener.html
src/django_project/core/templates/core/htmx_boosted/: about_user.html  file_hosting.html  home.html  login.html  url_shortener.html
src/django_project/core/templates/core/include/: base.html
src/django_project/core/templates/registration/: login.html
src/django_project/core/utils/: common.py  statistics.py
src/django_project/django_project/: settings.py  urls.py
src/django_project/static/core/: input.css  output.css
