[project]
name = "webtoolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "django==5.2.*",
    "django-cleanup>=9.0.0",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-stubs==5.2.*",
    "django-taggit>=6.1.0",
    "environs[django]>=14.5.0",
    "gunicorn[gevent]>=23.0.0",
    "ipython>=9.7.0",
    "ruff>=0.14.5",
    "whitenoise>=6.11.0",
]
